Made required task optional (as it implicitly was)